--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -20,7 +20,7 @@
               <% if @current_plan.selected_mission %>
                 <%= link_to missions_path do %>
                   <div class="row">
-                    <div class="col-xs-4  p-t-10">
+                    <div class="col-xs-5  p-t-10">
                       <div class="offer offer-radius offer-warning">
                         <div class="shape">
                           <div class="shape-text">
@@ -40,7 +40,7 @@
                       </div>
                     </div>
                   </div>
-                <% end %> %>
+                <% end %>
               <% else %>
                 <h5>
                   Parece que você ainda não criou uma missão
@@ -50,24 +50,47 @@
             </div>
             <hr/>
 
-            <h3>Âmbitos <%= link_to "", spheres_path, class: "btn btn-success lnr lnr-pencil" %></h3>
-
+            <h3>Âmbitos</h3>
             <% if !current_user.spheres.nil? %>
               <div class="row">
                 <%= render partial: "spheres/spheres", collection: @spheres %>
+                <%= link_to spheres_path do %>
+                  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
+                    <div class="dashed dashed-border">
+                      <div class="dashed-content ">
+                        <h3 class="lead box-gray-dashed">
+                          <span class="lnr lnr-plus-circle"></span>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
               </div>
             <% else %>
               Crie um âmbito de vida para seus objetivos
               <%= link_to " Criar", new_sphere_path, class: "btn btn-primary lnr lnr-plus-circle" %></h3>
             <% end %>
-
             <hr/>
 
-            <h3>Objetivos
-              Estratégicos <%= link_to "", editobjectives_path, class: "btn btn-success lnr lnr-pencil" %></h3>
-
+            <h3>Objetivos Estratégicos</h3>
             <% if !@current_plan.objectives.nil? %>
-              <%= render template: "objectives/index" %>
+              <div class="row">
+                <%= render template: "objectives/index" %>
+              </div>
+
+              <div class="row">
+                <%= link_to editobjectives_path do %>
+                  <div class="col-xs-8 p-t-10">
+                    <div class="dashed dashed-border">
+                      <div class="dashed-content ">
+                        <h3 class="lead box-gray-dashed">
+                          <span class="lnr lnr-plus-circle"></span>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
             <% else %>
               Crie seu primeiro Objetivo Estratégico Pessoal
               <%= link_to " Criar", new_objective_path, class: "btn btn-primary lnr lnr-plus-circle" %></h3>
