--- a/app/views/visions/new.html.erb
+++ b/app/views/visions/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="wrap-collabsible p-t-60 p-b-20">
     <input id="collapsible" class="toggle" type="checkbox" style="display: none">
-    <label for="collapsible" class="lbl-toggle">EXEMPLOS MISSÃO</label>
+    <label for="collapsible" class="lbl-toggle">EXEMPLOS VISÂO</label>
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
@@ -17,7 +17,6 @@
       </div>
     </div>
   </div>
-
 
   <%= render partial: "form", locals: {texto_da_acao: "Criar"} %>
 </div>
