Creating Critical Success Factors to project

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -20,7 +20,7 @@
 
   <%= form.hidden_field :selected_vision, value: nil %>
 
-  <%= form.hidden_field :critical_success_factors_selected, value: nil %>
+  <%= form.hidden_field :selected_csf, value: nil %>
 
   <%= form.submit "Criar", class: "btn btn-primary" %>
 <% end %>
