--- a/app/views/csfs/edit.html.erb
+++ b/app/views/csfs/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing Csf</h1>
-
-<%= render 'form', csf: @csf %>
-
-<%= link_to 'Show', @csf %> |
-<%= link_to 'Back', csfs_path %>
+<%= render partial: "form", locals: { action_text: "Atualizar" } %>
