--- a/app/views/csfs/new.html.erb
+++ b/app/views/csfs/new.html.erb
@@ -1,5 +1,22 @@
-<h1>New Csf</h1>
+<div class="container">
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none">
+    <label for="collapsible" class="lbl-toggle">EXEMPLOS FATORES CRÍTICOS DE SUCESSO</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+          Exemplos de nomes para um plano:
+          <br/>
+          <br/>
+          O melhor plano<br/>
+          Meu plano<br/>
+          Plano infalível<br/>
+          A minha vida<br/>
+          Plano A
+        </div>
+      </div>
+    </div>
+  </div>
 
-<%= render 'form', csf: @csf %>
-
-<%= link_to 'Back', csfs_path %>
+  <%= render partial: "form", locals: {action_text: "Criar"} %>
+</div>
