--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -100,6 +100,51 @@
 
             <div class="row">
               <div class="padding-all">
+                <% if @my_csf %>
+                  <%= link_to csfs_path do %>
+                    <div class="col-xs-12 p-t-10">
+                      <div class="offer offer-radius offer-default">
+                        <div class="shape">
+                          <div class="shape-text">
+                          </div>
+                        </div>
+                        <div class="offer-content">
+                          <h3 class="color-dark">Meus Fatores Críticos de Sucesso </h3>
+                          <hr/>
+                          <h3 class="lead color-dark m-b-5">Que características me tornam único?</h3>
+                          <p><%= "#{@my_csf.what_makes_me_unique}" %></p>
+                          <h3 class="lead color-dark m-b-5">Quais minhas melhores competências?</h3>
+                          <p><%= "#{@my_csf.best_attributes}" %></p>
+                          <h3 class="lead color-dark m-b-5">Quais delas são essenciais para meus objetivos?</h3>
+                          <p><%= "#{@my_csf.essential_atributes}" %></p>
+                          <h3 class="lead color-dark m-b-5">Quais fatores impactam no meu bem estar?</h3>
+                          <p><%= "#{@my_csf.health_factors}" %></p>
+                          <p>
+                            Criado em: <%= @my_csf.created_at.strftime("%d/%m/%Y") %>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                <% else %>
+                  <%= link_to csfs_path do %>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
+                      <div class="dashed dashed-border">
+                        <div class="dashed-content ">
+                          <h3 class="lead box-gray-dashed">
+                            <span class="lnr lnr-file-empty"> Selecionar Fator Crítico de Sucesso</span>
+                          </h3>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
+            <hr/>
+
+            <div class="row">
+              <div class="padding-all">
                 <h3>Meus valores</h3>
                 <%= render partial: "values/values", collection: @current_plan.values %>
                 <%= render partial: "values/form" %>
@@ -137,7 +182,7 @@
 
               <div class="row">
                 <%= link_to editobjectives_path do %>
-                  <div class="col-xs-8 p-t-10">
+                  <div class="col-xs-6 p-t-10">
                     <div class="dashed dashed-border">
                       <div class="dashed-content ">
                         <h3 class="lead box-gray-dashed">
