--- a/app/views/roles/_roles.html.erb
+++ b/app/views/roles/_roles.html.erb
@@ -1,17 +1,20 @@
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
-  <%= link_to roles_path do %>
-    <div class="offer offer-radius offer-success">
+<div class="col-xs-12 ">
+  <%= link_to edit_role_path(roles) do %>
+    <div class="offer offer-radius offer-paper">
       <div class="shape">
         <div class="shape-text">
         </div>
       </div>
-      <div class="offer-content">
+      <div class="offer-content p-b-0">
         <h3 class="lead color-dark">
-          <%= roles.name %>
-          <%= roles.description %>
+          <table>
+            <tbody>
+              <td width="100px">Como <%= roles.name %></td>
+              <td width="300px" class="p-l-30"><%= roles.description %></td>
+            </tbody>
+          </table>
         </h3>
       </div>
-      <p class="p-l-15 p-b-5"><%= roles.created_at.strftime("%d/%m/%Y") %></p>
     </div>
   <% end %>
 </div>
