--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -2,4 +2,9 @@
   <h1 class="p-t-50 p-b-10">Edição de papel</h1>
 
   <%= render "form", value: @role %>
+
+  <div class="container p-t-30">
+    <%= link_to " Remover", @role, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+  </div>
+
 </div>
