--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <h3 class="p-t-50 p-b-20">Editar papéis</h3>
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+  <div class="col-xs-8">
     <% @roles.each do |role| %>
-      <div class="offer offer-radius offer-success">
+      <div class="offer offer-radius offer-paper">
         <div class="shape">
           <div class="shape-text">
           </div>
