Layout improve on myplan and else statments to plans controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
-        <h1 class="wow fadeIn color-white" data-wow-offset="50" data-wow-delay="0.9s"><span>Life to Remind</span></h1>
+        <h1 class="wow fadeIn color-white" data-wow-offset="50" data-wow-delay="0.9s"><span>Life to Remind</span><span class="home-version"> Alpha</span></h1>
         <div class="element">
           <div class="sub-element">Life To Remind</div>
           <div class="sub-element">Planeje sua vida</div>
