--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -43,12 +43,12 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to missions_path do %>
+                  <%= link_to new_mission_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Selecionar Missão</span>
+                            <span class="lnr lnr-file-empty"> Nova Missão</span>
                           </h3>
                         </div>
                       </div>
@@ -81,12 +81,12 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to visions_path do %>
+                  <%= link_to new_vision_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Selecionar visão</span>
+                            <span class="lnr lnr-file-empty"> Nova Visão</span>
                           </h3>
                         </div>
                       </div>
@@ -127,12 +127,12 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to csfs_path do %>
+                  <%= link_to new_csf_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Selecionar Fator Crítico de Sucesso</span>
+                            <span class="lnr lnr-file-empty"> Novo Fator Crítico de Sucesso</span>
                           </h3>
                         </div>
                       </div>
@@ -201,7 +201,7 @@
 
               <div class="row">
                 <%= link_to editobjectives_path do %>
-                  <div class="col-xs-6 p-t-10">
+                  <div class="col-xs-10 p-t-10">
                     <div class="dashed dashed-border">
                       <div class="dashed-content ">
                         <h3 class="lead box-gray-dashed">
