Password length 8..70 and error messages to sign_in and sign_up

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,11 @@
   <hr/>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |form| %>
-    <%= devise_error_messages! %>
+    <% resource.errors.full_messages.each do |msg| %>
+      <div class="alert alert-danger" role="alert">
+        <%= msg %>
+      </div>
+    <% end %>
 
     <div class="row">
       <div class="col-sm-6">
