--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -200,7 +200,7 @@
               </div>
 
               <div class="row">
-                <%= link_to editobjectives_path do %>
+                <%= link_to new_objective_path do %>
                   <div class="col-xs-10 p-t-10">
                     <div class="dashed dashed-border">
                       <div class="dashed-content ">
