--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -5,7 +5,7 @@
     <div class="form-group">
       <strong>Objetivo de vida</strong>
       <hr/>
-      <%= @plan.life_objective %>
+      <%= @plan.name %>
     </div>
   </div>
 </div>
