--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,7 +1,9 @@
-<div class="container">
+<div class="container p-t-40">
   <% if current_user.selected_plan %>
-    <%= link_to "Alterar Plano", plans_path, method: "get", class: "btn btn-success" %>
-    <%= link_to "Download PDF", myplan_path(id: @current_plan, format: :pdf) %>
+    <div class="p-b-10" align="right">
+    <%= link_to "Alterar Plano", plans_path, method: "get", class: "btn btn-primary" %>
+      <%= link_to "Download PDF", plans_pdf_path(id: @current_plan, format: :pdf), class: "btn btn-success" %>
+    </div>
     <div class="row">
       <div class="card">
         <div class="card-body">
