--- a/app/views/plans/pdf.html.erb
+++ b/app/views/plans/pdf.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset='utf-8'/>
-  <!-- "%= stylesheet_link_tag wicked_pdf_asset_base64("") %-->
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("card_offer") %>
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("plans") %>
   <!-- %= javascript_include_tag wicked_pdf_asset_base64("") %-->
 </head>
 <body>
@@ -21,41 +22,81 @@
 
     <!-- Mission -->
     <% if @my_mission %>
-      <h3>Minha Missão </h3>
-      <h4>Propósito de Vida</h4>
-      <p><%= "#{@my_mission.purpose_of_life}" %></p>
-      <h4>Quem sou eu</h4>
-      <p><%= "#{@my_mission.who_am_i}" %></p>
-      <h4>Porque existo</h4>
-      <p><%= "#{@my_mission.why_exist}" %></p>
+      <div class="col-xs-4  p-t-10">
+        <div class="offer offer-radius offer-warning">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content">
+            <h3 class="color-dark">Minha Missão </h3>
+            <hr/>
+            <h3 class="lead color-dark m-b-5">Propósito de Vida</h3>
+            <p><%= "#{@my_mission.purpose_of_life}" %></p>
+            <h3 class="lead color-dark m-b-5">Quem sou eu</h3>
+            <p><%= "#{@my_mission.who_am_i}" %></p>
+            <h3 class="lead color-dark m-b-5">Porque existo</h3>
+            <p><%= "#{@my_mission.why_exist}" %></p>
+            <p>
+              Criado em: <%= @my_mission.created_at.strftime("%d/%m/%Y") %>
+            </p>
+          </div>
+        </div>
+      </div>
     <% end %>
 
-    <hr/>
     <!-- Vision -->
     <% if @my_vision %>
-      <h3>Minha Visão </h3>
-      <h3>Para onde vou?</h3>
-      <p><%= "#{@my_vision.where_im_going}" %></p>
-      <h3>Onde quero chegar?</h3>
-      <p><%= "#{@my_vision.where_arrive}" %></p>
-      <h3>Como tornarei concreta a minha missão?</h3>
-      <p><%= "#{@my_vision.how_complete_mission}" %></p>
+      <div class="col-xs-7  p-t-10">
+        <div class="offer offer-radius offer-danger">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content">
+            <h3 class="color-dark">Minha Visão </h3>
+            <hr/>
+            <h3 class="lead color-dark m-b-5">Para onde vou?</h3>
+            <p><%= "#{@my_vision.where_im_going}" %></p>
+            <h3 class="lead color-dark m-b-5">Onde quero chegar?</h3>
+            <p><%= "#{@my_vision.where_arrive}" %></p>
+            <h3 class="lead color-dark m-b-5">Como tornarei concreta a minha missão?</h3>
+            <p><%= "#{@my_vision.how_complete_mission}" %></p>
+            <p>
+              Criado em: <%= @my_vision.created_at.strftime("%d/%m/%Y") %>
+            </p>
+          </div>
+        </div>
+      </div>
 
     <% end %>
-    <hr/>
+
     <!-- Fatores Críticos de Sucesso -->
     <% if @my_csf %>
-      <h3>Meus Fatores Críticos de Sucesso </h3>
-      <h3>Que características me tornam único?</h3>
-      <p><%= "#{@my_csf.what_makes_me_unique}" %></p>
-      <h3>Quais minhas melhores competências?</h3>
-      <p><%= "#{@my_csf.best_attributes}" %></p>
-      <h3>Quais delas são essenciais para meus objetivos?</h3>
-      <p><%= "#{@my_csf.essential_atributes}" %></p>
-      <h3>Quais fatores impactam no meu bem estar?</h3>
-      <p><%= "#{@my_csf.health_factors}" %></p>
+      <div class="col-xs-12 p-t-10">
+        <div class="offer offer-radius offer-default">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content">
+            <h3 class="color-dark">Meus Fatores Críticos de Sucesso </h3>
+            <hr/>
+            <h3 class="lead color-dark m-b-5">Que características me tornam único?</h3>
+            <p><%= "#{@my_csf.what_makes_me_unique}" %></p>
+            <h3 class="lead color-dark m-b-5">Quais minhas melhores competências?</h3>
+            <p><%= "#{@my_csf.best_attributes}" %></p>
+            <h3 class="lead color-dark m-b-5">Quais delas são essenciais para meus objetivos?</h3>
+            <p><%= "#{@my_csf.essential_atributes}" %></p>
+            <h3 class="lead color-dark m-b-5">Quais fatores impactam no meu bem estar?</h3>
+            <p><%= "#{@my_csf.health_factors}" %></p>
+            <p>
+              Criado em: <%= @my_csf.created_at.strftime("%d/%m/%Y") %>
+            </p>
+          </div>
+        </div>
+      </div>
     <% end %>
-    <hr/>
     <!-- Valores -->
     <h3>Meus Valores</h3>
     <%= render partial: "values/values", collection: @current_plan.values %>
