--- a/app/views/plans/pdf.html.erb
+++ b/app/views/plans/pdf.html.erb
@@ -2,23 +2,29 @@
 <html>
 <head>
   <meta charset='utf-8'/>
-  <%= stylesheet_link_tag wicked_pdf_asset_base64("card_offer") %>
-  <%= stylesheet_link_tag wicked_pdf_asset_base64("plans") %>
-  <!-- %= javascript_include_tag wicked_pdf_asset_base64("") %-->
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("card_offer.scss") %>
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("plans.scss") %>
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("application.scss") %>
+  <%= stylesheet_link_tag wicked_pdf_asset_base64("objectives.scss") %>
+  <%= javascript_include_tag wicked_pdf_asset_base64("application.js") %>
 </head>
 <body>
 <div class="container">
   <% if current_user.selected_plan %>
-    <h2>Planejamento Estratégico Pessoal de <%= current_user.name %></h2>
+    <h3>Planejamento Estratégico Pessoal de <%= current_user.name %></h3>
+    <div class="p-t-20 p-b-20">
+      <span class="card-divider"/>
+    </div>
 
-    <h3>Data: <%= @current_plan.created_at.strftime("%d/%m/%Y") %></h3>
-    <h3>Nome do Plano: <%= "#{@current_plan.name}" %></h3>
-    <hr/>
+    <h4>Data: <%= @current_plan.created_at.strftime("%d/%m/%Y") %></h4>
+    <h4>Nome do Plano: <%= "#{@current_plan.name}" %></h4>
+    <div class="p-t-20 p-b-20">
+      <span class="card-divider"/>
+    </div>
 
     <!-- Análise Ambiental -->
     <h3>Matriz SWOT</h3>
     <p class="card-text"><%= render template: "plans/swot" %></p>
-    <hr/>
 
     <!-- Mission -->
     <% if @my_mission %>
@@ -30,7 +36,9 @@
           </div>
           <div class="offer-content">
             <h3 class="color-dark">Minha Missão </h3>
-            <hr/>
+            <div class="p-t-20 p-b-20">
+              <span class="card-divider"/>
+            </div>
             <h3 class="lead color-dark m-b-5">Propósito de Vida</h3>
             <p><%= "#{@my_mission.purpose_of_life}" %></p>
             <h3 class="lead color-dark m-b-5">Quem sou eu</h3>
@@ -55,7 +63,9 @@
           </div>
           <div class="offer-content">
             <h3 class="color-dark">Minha Visão </h3>
-            <hr/>
+            <div class="p-t-20 p-b-20">
+              <span class="card-divider"/>
+            </div>
             <h3 class="lead color-dark m-b-5">Para onde vou?</h3>
             <p><%= "#{@my_vision.where_im_going}" %></p>
             <h3 class="lead color-dark m-b-5">Onde quero chegar?</h3>
@@ -81,7 +91,9 @@
           </div>
           <div class="offer-content">
             <h3 class="color-dark">Meus Fatores Críticos de Sucesso </h3>
-            <hr/>
+            <div class="p-t-20 p-b-20">
+              <span class="card-divider"/>
+            </div>
             <h3 class="lead color-dark m-b-5">Que características me tornam único?</h3>
             <p><%= "#{@my_csf.what_makes_me_unique}" %></p>
             <h3 class="lead color-dark m-b-5">Quais minhas melhores competências?</h3>
@@ -98,62 +110,129 @@
       </div>
     <% end %>
     <!-- Valores -->
-    <h3>Meus Valores</h3>
-    <%= render partial: "values/values", collection: @current_plan.values %>
-    </div>
-    <hr/>
-    <!-- Papéis -->
-    <h3>Meus Papéis</h3>
-    <div class="row p-t-20">
-      <table>
-        <tbody>
-        <td width="100px" class="p-l-30">Papel chave</td>
-        <td width="300px" class="p-l-60">Como me vejo no futuro</td>
-        </tbody>
-      </table>
-      <%= render partial: "roles/roles", collection: @current_plan.roles %>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
+      <div class="offer offer-radius offer-success">
+        <div class="shape">
+          <div class="shape-text">
+          </div>
+        </div>
+        <div class="offer-content">
+          <h3>Meus Valores</h3>
+          <div class="p-t-20 p-b-20">
+            <span class="card-divider"/>
+          </div>
+          <% @current_plan.values.each do |values| %>
+            <h3 class="lead color-dark"><%= values.name %></h3>
+          <% end %>
+        </div>
+      </div>
     </div>
 
-    <hr/>
+    <!-- Papéis -->
+    <div class="row p-t-20">
+      <div class="col-xs-12 ">
+        <div class="offer offer-radius offer-paper">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content">
+            <h3>Meus Papéis</h3>
+            <table>
+              <body>
+              <td width="200px">Papel chave</td>
+              <td width="400px" class="p-l-30">Como me vejo no futuro</td>
+              </body>
+            </table>
+            <div class="p-t-20 p-b-20">
+              <span class="card-divider"/>
+            </div>
+            <table>
+              <h3 class="lead color-dark">
+                <% @current_plan.roles.each do |role| %>
+                  <tbody>
+                  <td width="200px">Como <%= role.name %></td>
+                  <td width="400px"><%= role.description %></td>
+                  </tbody>
+                <% end %>
+              </h3>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Âmbitos -->
     <% if !current_user.spheres.nil? %>
-      <h3>Meus Fatores Críticos de Sucesso </h3>
-      <%= render partial: "spheres/spheres", collection: @spheres %>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
+        <div class="offer offer-radius offer-primary">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content">
+            <h3>Âmbitos </h3>
+            <div class="p-t-20 p-b-20">
+              <span class="card-divider"/>
+            </div>
+            <% @spheres.each do |sphere| %>
+              <h3 class="lead color-dark">
+                <%= sphere.name %>
+              </h3>
+            <% end %>
+          </div>
+        </div>
+      </div>
     <% end %>
-    <hr/>
+
     <!-- Objetivos Estratégicos -->
     <h3>Objetivos Estratégicos</h3>
     <% if !@current_plan.objectives.nil? %>
-      <% @objectives.each do |objective| %>
-        <br/>
-        <h3 class="lead color-dark">
-          Objetivo: <%= objective.name %><br/>
-        </h3>
-        <h5>
-          <%= objective.created_at.strftime("%d/%m/%Y") %>
-        </h5>
-        <% objective.goals.each do |goal| %>
-          <div class="card">
-            <div class="card-body">
-              <div class="padding-all">
-                <h4 class="card-title">Meta: <%= goal.name %> -> <%= goal.progress %>% </h4>
-                <% goal.activities.each do |activity| %>
-                  <h4 class="card-body">
-                    - <%= activity.title %>
-                    <% if activity.checked %>
-                      -> Feito!
-                    <% end %>
-                  </h4>
+      <div class="row">
+        <div class="col-xs-12  p-t-10">
+          <% @current_plan.objectives.each_with_index do |objective, i| %>
+            <div class="offer offer-radius offer-info">
+              <div class="shape">
+                <div class="shape-text">
+                </div>
+              </div>
+              <div class="offer-content">
+                <h3 class="lead color-dark">Objetivo: <%= objective.name %></h3>
+                <% objective.goals.each do |goal| %>
+                  <div class="row">
+                    <div class="col-border">
+                      <div class="card">
+                        <div class="card-body">
+                          <div class="padding-all">
+                            <h4 class="card-title"><%= goal.name %> </h4>
+                            <div class="p-t-20 p-b-20">
+                              <span class="card-divider"/>
+                            </div>
+                            <h5 class="card-body"><%= goal.progress %>% concluído. </h5>
+                            <div class="p-l-20 p-t-20">
+                              Atividades:<br/>
+                              <% goal.activities.each do |activity| %>
+                                <% if !activity.checked %>
+                                  <p><strong><%= activity.title %></strong></p>
+                                <% else %>
+                                  <p><%= activity.title %></p>
+                                <% end %>
+                              <% end %>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 <% end %>
+                Data da criação: <%= objective.created_at.strftime("%d/%m/%Y") %>
               </div>
             </div>
-          </div>
-        <% end %>
-      <% end %>
-      </div>
+          <% end %>
+        </div>
       </div>
     <% end %>
   <% end %>
-  </div>
-  </body>
+</div>
+</body>
 </html>
