Progress to sphere and showing on status page

--- a/app/views/spheres/_spheres.html.erb
+++ b/app/views/spheres/_spheres.html.erb
@@ -8,6 +8,7 @@
     <div class="offer-content">
       <h3 class="lead color-dark">
         <%= spheres.name %>
+        <%= spheres.progress %>
       </h3>
       <p>
         Ver Objetivos
