--- a/app/views/plans/inicio.html.erb
+++ b/app/views/plans/inicio.html.erb
@@ -1,49 +1,89 @@
-<div class="row p-t-80">
+<div class="row p-t-50">
   <div class="col-md-12">
-    <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>Status do meu planejamento</span></h2>
+    <h2 class="wow" data-wow-offset="50" data-wow-delay="0.3s"><span>Status do meu planejamento</span></h2>
   </div>
 </div>
 
-<section id="progress">
-  <div class="container">
+<section id="sphere-status">
+  <div class="container p-b-50">
     <div class="row">
       <div class="col-md-12">
         <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Progresso dos
-          <span>Objetivos Estratégicos </span></h2>
+          <span>Âmbitos</span></h2>
       </div>
       <!-- TODO Complexity -->
       <% @spheres.each do |sphere| %>
-        <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
-          <div style="height: 500px">
+        <% if sphere.progress != nil %>
+          <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
             <div class="media">
               <div class="media-heading-wrapper">
                 <h3 class="media-heading"><%= sphere.name %></h3>
               </div>
               <div class="media-body">
-                <% sphere.objectives.each do |objective| %>
-                  <% if objective.goals.empty? %><%= "Adicione uma meta" %><% end %>
-                  <% objective.goals.each_with_index do |go, i| %>
-                    <%= go.name %>
-                    <% if go.progress < 30 %>
-                      <% bar_color = @chartColors[0] %>
-                    <% elsif go.progress > 31 and go.progress < 60 %>
-                      <% bar_color = @chartColors[1] %>
-                    <% else %>
-                      <% bar_color = @chartColors[2] %>
-                    <% end %>
-                    <% goal_data1 = [
-                        ["", go.progress],
-                    ] %>
-                    <%= bar_chart goal_data1, suffix: "%", label: "Porcentagem concluída", colors: bar_color, min: 0, max: 100, height: "100px" %>
-                  <% end %>
+                <%= sphere.name %>
+                <% if sphere.progress < 30 %>
+                  <% bar_color = @chartColors[0] %>
+                <% elsif sphere.progress > 31 and sphere.progress < 60 %>
+                  <% bar_color = @chartColors[1] %>
+                <% else %>
+                  <% bar_color = @chartColors[2] %>
                 <% end %>
+
+                <%= bar_chart [["", sphere.progress]], suffix: "%", label: "Porcentagem concluída", colors: bar_color, min: 0, max: 100, height: "100px" %>
               </div>
             </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
+    </div>
+  </div>
+</section>
 
+<section id="progress">
+  <div class="container p-b-50">
+    <div class="row">
+      <div class="col-xs-12 wow fadeInDown" data-wow-offset="50" data-wow-delay="0.9s">
 
+        <div class="col-md-12">
+          <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Progresso dos
+            <span>Objetivos Estratégicos </span></h2>
+        </div>
+        <!-- TODO Complexity -->
+        <table>
+          <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @spheres.each do |sphere| %>
+            <% sphere.objectives.where(plan_id: @current_plan.id).each do |objective| %>
+              <% if !objective.goals.blank? %>
+                <% objective.goals.each_with_index do |go, i| %>
+                  <tr>
+                    <th scope="row"></th>
+                    <td>
+                      <%= go.name %>
+                      <% if go.progress < 30 %>
+                        <% bar_color = @chartColors[0] %>
+                      <% elsif go.progress > 31 and go.progress < 60 %>
+                        <% bar_color = @chartColors[1] %>
+                      <% else %>
+                        <% bar_color = @chartColors[2] %>
+                      <% end %>
+                      <%= bar_chart [["", go.progress]], suffix: "%", label: "Porcentagem concluída", colors: bar_color, min: 0, max: 100, height: "80px", width: "500px" %>
+                    </td>
+                  </tr>
+                <% end %>
+              <% end %>
+            <% end %>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </section>
@@ -55,7 +95,7 @@
         <div class="media-heading-wrapper">
           <h3 class="media-heading">
             <div class="text-center color-ltr">
-              <span>Análise Ambiental</span><br/>Matriz SWOT Pessoal
+              <span>Análise Ambiental</span><br/>Distribuição de características
             </div>
           </h3>
         </div>
