--- a/app/views/plans/inicio.html.erb
+++ b/app/views/plans/inicio.html.erb
@@ -21,14 +21,7 @@
               </div>
               <div class="media-body">
                 <%= sphere.name %>
-                <% if sphere.progress < 30 %>
-                  <% bar_color = @chartColors[0] %>
-                <% elsif sphere.progress > 31 and sphere.progress < 60 %>
-                  <% bar_color = @chartColors[1] %>
-                <% else %>
-                  <% bar_color = @chartColors[2] %>
-                <% end %>
-
+                <% bar_color = select_color(sphere.progress) %>
                 <%= bar_chart [["", sphere.progress]], suffix: "%", label: "Porcentagem concluída", colors: bar_color, min: 0, max: 100, height: "100px" %>
               </div>
             </div>
@@ -50,14 +43,6 @@
         </div>
         <!-- TODO Complexity -->
         <table>
-          <thead>
-          <tr>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-          </tr>
-          </thead>
           <tbody>
           <% @spheres.each do |sphere| %>
             <% sphere.objectives.where(plan_id: @current_plan.id).each do |objective| %>
@@ -67,13 +52,7 @@
                     <th scope="row"></th>
                     <td>
                       <%= go.name %>
-                      <% if go.progress < 30 %>
-                        <% bar_color = @chartColors[0] %>
-                      <% elsif go.progress > 31 and go.progress < 60 %>
-                        <% bar_color = @chartColors[1] %>
-                      <% else %>
-                        <% bar_color = @chartColors[2] %>
-                      <% end %>
+                      <% bar_color = select_color(go.progress) %>
                       <%= bar_chart [["", go.progress]], suffix: "%", label: "Porcentagem concluída", colors: bar_color, min: 0, max: 100, height: "80px", width: "500px" %>
                     </td>
                   </tr>
