--- a/app/assets/stylesheets/card_offer.scss
+++ b/app/assets/stylesheets/card_offer.scss
@@ -12,6 +12,15 @@
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
+
+.offer-without-hover {
+  background:#fff; border:1px solid #ddd; box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); margin: 15px 0; overflow:hidden;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
 .offer:hover {
   -webkit-transform: scale(1.05);
   -moz-transform: scale(1.05);
