--- a/app/views/goals/_cardgoal.erb
+++ b/app/views/goals/_cardgoal.erb
@@ -6,8 +6,8 @@
           <div class="goal-description">
             <div class="goal-activities">
               <h4 class="card-title">Nome da meta: <%= cardgoal.name %>
-                <%= link_to " ", edit_goal_path(cardgoal, :objective_id => cardgoal.objective), class: "lnr lnr-pencil btn btn-default" %>
-                <%= link_to " ", cardgoal, method: :delete, data: {confirm: 'Tem certeza que quer remover essa meta?'}, class: "lnr lnr-circle-minus btn btn-danger" %>
+                <%= link_to " ", edit_goal_path(cardgoal, :objective_id => cardgoal.objective), class: "lnr lnr-pencil" %>
+                <%= link_to " ", cardgoal, method: :delete, data: {confirm: 'Tem certeza que quer remover essa meta?'}, class: "lnr lnr-circle-minus" %>
               </h4>
               <span class="card-divider"></span>
               <br/>
@@ -22,7 +22,7 @@
                     <tr>
                       <td><%= check_box_tag "activity_ids[]", activity.id, activity.checked %></td>
                       <td><%= activity.title %></td>
-                      <td><%= link_to " ", activity, method: :delete, class:"btn btn-danger lnr lnr-circle-minus" %></td>
+                      <td><%= link_to " ", activity, method: :delete, class:"lnr lnr-circle-minus" %></td>
                     </tr>
                   <% end %>
                   </tbody>
